# zephyr

./: README.md
apps/daemon/: CMakeLists.txt  daemon.code-workspace  daemon.yaml  prj.conf
apps/daemon/sources/: main.c
apps/nucleo/: CMakeLists.txt  nucleo.code-workspace  nucleo.yaml  prj.conf
apps/nucleo/lorawan/: CMakeLists.txt  lorawan_node.c  lorawan_node.h
apps/nucleo/lorawan/config/: Commissioning.h  lora_info.c  lora_info.h  lorawan_conf.h  mac_config.h  radio_conf.h  rtctime.h  se-identity.h  subghz.c  subghz.h  utilities.h
apps/nucleo/lorawan/crypto/: soft-se.c
apps/nucleo/lorawan/lmh/: LmHandler.c  LmHandler.h  NvmCtxMgmt.c
apps/nucleo/lorawan/mac/: LoRaMac.c  LoRaMac.h  LoRaMacClassB.c
apps/nucleo/lorawan/mac/Region/: RegionCN470.c  RegionCommon.c
apps/nucleo/lorawan/radio/stm32_radio_driver/: radio.c  radio_driver.c
apps/nucleo/lorawan/sysdep/: CMakeLists.txt  lora_info.c  lora_info.h  rtclock.c  rtclock.h  rtctime.c  rtctime.h  subghz.c  subghz.h  systime.c  timer.c  timer.h  utilities.c  utilities.h
apps/nucleo/sources/: ipcc.c  ipcc.h  main.c  network.c  network.h
boards/arm/bearpi-l431rc/: bearpi_l431rc.dts  bearpi_l431rc.yaml  bearpi_l431rc_defconfig
boards/arm/bearpi_l431rc/: Kconfig.board  Kconfig.defconfig  bearpi_l431rc.dts  (+2 more)
drivers/interrupt_controller/: intc_exti_stm32.c
drivers/ipm/: CMakeLists.txt  Kconfig  ipm_stm32_ipcc.c  ipm_stm32_ipcc2.c
drivers/st7789v2/: CMakeLists.txt  Kconfig  st7789v2.c  st7789v2.h
drivers/stm32_fmc_sram/: CMakeLists.txt  Kconfig  stm32_fmc_sram.c  stm32_fmc_sram.ld
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.stm32_rtc  stm32_rtc_timer.c
nucleo/cm0/: CMakeLists.txt  disco.code-workspace  disco.yaml  prj.conf
nucleo/cm0/src/: main.c
nucleo/cm4/: CMakeLists.txt  nucleo_cm4.code-workspace  nucleo_cm4.yaml  prj.conf
nucleo/cm4/src/: main.c
(+67 files in other folders)
